# api_extractor

./: .coverage  .dockerignore  .gitignore  .gitmodules  100  CLAUDE.md  Dockerfile  FASTAPI_DOCFLOW_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  LAMBDA_DEPLOYMENT.md  LAMBDA_VERIFICATION.md  Makefile  README.md  SPRING_BOOT_IMPROVEMENTS.md  SPRING_BOOT_RESPONSE_VERIFICATION.md  VALIDATION_REAL_WORLD_TESTS.md  VALIDATION_SUPPORT.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  extracted_openapi.json  gin_final.json  pyproject.toml  requirements.txt  springboot_improved.json  springboot_with_responses.json  test_article_slug.py  test_comments_get.py  test_comments_post.py  test_favorite.py  test_lambda_http.py  test_pattern.py  test_pattern2.py  test_spring_post.py  test_spring_response.py  test_tags.py
.github/workflows/: tests.yml
api_extractor/: __init__.py  cli.py
api_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
api_extractor/core/: __init__.py  base_extractor.py  detector.py  models.py  parser.py
api_extractor/extractors/: __init__.py  schema_utils.py
api_extractor/input_handlers/: __init__.py  base.py  local.py  s3.py
api_extractor/lambda/: QUICK_START.md  build_lambda.sh  cleanup.sh  config.sh  create_function_url.sh  deploy_lambda.sh  handler.py  openapi.yaml  requirements.txt  setup_s3_files.py  setup_s3_files.sh  test_lambda_local.py  test_lambda_remote.sh
api_extractor/openapi/: __init__.py  builder.py  models.py
api_extractor/server/: __init__.py  app.py  config.py  security.py
api_extractor/service/: __init__.py  extractor_service.py  models.py
deployment/lambda/: attach_s3_files.sh  cleanup_vpc.sh  deploy_lambda.sh  setup_vpc.sh  test_lambda_local.py  test_lambda_remote.sh
docs/: PROGRESS_REPORT.md  TECHNICAL_DEBT.md
docs/deployment/: docker.md  http-server.md  kubernetes.md  lambda.md
docs/frameworks/: csharp.md  go.md  java.md  javascript.md  python.md
docs/guides/: typebox-fastify.md
docs/test-repos/: IMPLEMENTATION_STATUS.md  README.md  SELECTIONS_SUMMARY.md  selection-criteria.md
tests/: .coverage  README.md  __init__.py
(+200 files in other folders)
